--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Comprá productos con Envío Gratis en el día en MELI. Encontrá miles de marcas y productos a precios increíbles."
     />
     <link
-      rel="apple-touch-icon"
+      rel="shortcut icon"
       href="https://http2.mlstatic.com/frontend-assets/ui-navigation/5.17.0/mercadolibre/180x180.png"
     />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link
-      rel="manifest"
-      href="https://http2.mlstatic.com/frontend-assets/ui-navigation/5.17.0/mercadolibre/180x180.png"
-    />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
