remove copyright meli

--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,20 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link
+    <!-- <link
       rel="icon"
       href="https://http2.mlstatic.com/frontend-assets/ui-navigation/5.17.0/mercadolibre/180x180.png"
-    />
+    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Comprá productos con Envío Gratis en el día en MELI. Encontrá miles de marcas y productos a precios increíbles."
     />
-    <link
+    <!-- <link
       rel="shortcut icon"
       href="https://http2.mlstatic.com/frontend-assets/ui-navigation/5.17.0/mercadolibre/180x180.png"
-    />
+    /> -->
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
