--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
     /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Comprá productos con Envío Gratis en el día en MELI. Encontrá miles de marcas y productos a precios increíbles."
-    />
+    <meta name="description" content="Comprá productos sin limite." />
     <!-- <link
       rel="shortcut icon"
       href="https://http2.mlstatic.com/frontend-assets/ui-navigation/5.17.0/mercadolibre/180x180.png"
@@ -31,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MELI</title>
+    <title>Home</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
